<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_root_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@drawable/rounded_popup_white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:showDividers="middle|beginning|end">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/login_signup_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_popup_white"
            android:orientation="vertical"
            android:visibility="visible"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="Reauthenticate to delete"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/leadme_red"
                android:visibility="gone" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:autofillHints="0"
                android:background="@drawable/rounded_btn_highlight"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/poppins_regular"
                android:gravity="left"
                android:hint="Email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textColorHint="@color/leadme_medium_grey"
                android:textSize="16sp"
                android:visibility="visible"></EditText>


            <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:autofillHints="0"
                android:background="@drawable/rounded_btn_highlight"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/poppins_regular"
                android:gravity="left"
                android:hint="Password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textColorHint="@color/leadme_medium_grey"
                android:textSize="16sp"
                android:visibility="visible"
                app:tint_color="@color/leadme_blue"></com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <Button

                    android:id="@+id/login_enter"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="@dimen/standard_btn_width"
                    android:layout_height="@dimen/standard_btn_height"
                    android:layout_gravity="center_horizontal"
                    android:accessibilityTraversalAfter="@id/back_btn"
                    android:accessibilityTraversalBefore="@id/login_pin_entry"
                    android:background="@drawable/bg_active"
                    android:clickable="true"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Enter"
                    android:layout_marginBottom="10dp"
                    android:textAllCaps="false"
                    android:textColor="@color/leadme_white"
                    android:textSize="16sp" />



                <Button
                    android:paddingTop="10dp"
                    android:id="@+id/login_back"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="@dimen/standard_btn_width"
                    android:layout_height="@dimen/standard_btn_height"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/bg_passive"
                    android:clickable="true"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/back"
                    android:textAllCaps="false"
                    android:textColor="@color/leadme_black"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/indeterminateBar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/leadme_blue"
            android:indeterminateTint="@color/leadme_blue"
            android:progressDrawable="@color/leadme_blue"
            android:progressTint="@color/leadme_blue"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>

