<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_title">LeadMe</string>
    <string name="app_title_with_brand">LeadMe Edu</string>

    <string name="default_browser_url">http://www.google.com/</string>

    <string name="logo_txt">Lumination Logo</string>
    <string name="icon_desc">App Icon</string>
    <string name="label_apps">Applications</string>
    <string name="label_curated_content">Curated Content</string>
    <string name="label_students">Active Learners</string>
    <string name="favourites">Favourites</string>
    <string name="all_apps">All Apps</string>
    <string name="connected_label">Connected</string>
    <string name="connect_label">Connect</string>
    <string name="reset_sett_app">Settings</string>
    <string name="exit_app">Exit</string>
    <string name="student_view_blocked">Your view has been blocked</string>
    <string name="logo">Logo</string>
    <string name="shake_your_device_to">your device to</string>
    <string name="lead">lead</string>
    <string name="find_a">find a</string>
    <string name="learner">Learner</string>
    <string name="leader">Leader</string>
    <string name="learners">Learners</string>
    <string name="leaders">Leaders</string>
    <string name="app">App</string>
    <string name="curated_content">Curated Content</string>
    <string name="url">URL</string>
    <string name="yt_vr">YT VR</string>
    <string name="textview">TextView</string>
    <string name="guide_share_connect">Guide. Share. Connect.</string>
    <string name="powered_by">Powered by</string>
    <string name="lumination_logo">Lumination logo</string>
    <string name="leadme_logo">LeadMe logo</string>
    <string name="join_a_class_lead">Enter a room code to join a class</string>
    <string name="login_and_begin_class">login and begin class</string>
    <string name="toggle_below_to">, toggle below to</string>
    <string name="menu_hamburger">Menu hamburger</string>
    <string name="teacher_code">Teacher code</string>
    <string name="waiting_for_leaders">Waiting for leaders …</string>
    <string name="enable_location_to_connect">Please enable Location permission\nto connect to leaders</string>
    <string name="enable_storage">"Please enable Storage permission"</string>

    <string name="push_success_title">Push Successful!</string>
    <string name="save_success_title">Save Successful!</string>
    <string name="link_push_success">Your link has been sent.</string>
    <string name="app_push_success">Your app request has been sent.</string>
    <string name="fav_save_success">Successfully saved to favourites!</string>

    <string name="please_enter_your_name">Please enter your name</string>
    <string name="missing_name">&#8226; Missing name</string>
    <string name="type_your_name_hint">Type your name</string>
    <string name="wrong_code">&#8226; Incorrect code</string>

    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="options">Options</string>
    <string name="finish">Finish</string>
    <string name="close">Close</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="cancel">Cancel</string>

    <string name="send">Send</string>
    <string name="done">Done</string>

    <string name="oops_something_went_wrong">Oops! Something went wrong!</string>
    <string name="warning_couldnt_launch_url">Could not find the URL you requested.\nAre you connected to the internet?</string>

    <string name="code_hint">0</string>
    <string name="how_to_use_leadme">How to use LeadMe</string>
    <string name="users_name">Username</string>

    <string name="preference_file_key">com.lumination.leadme.PREFERENCES</string>
    <string name="preference_fav_app_prefix">com.lumination.leadme.FAVAPP</string>
    <string name="preference_fav_url_prefix">com.lumination.leadme.FAVURL</string>
    <string name="preference_fav_yt_prefix">com.lumination.leadme.FAVYT</string>

    <string name="add_this_app_to_favourites">Add to favourites?</string>
    <string name="delete_this_app_from_favourites">Delete from favourites?</string>
    <string name="all_your_favourites_are_full">All your favourites are full!\nDelete one to make room.</string>
    <string name="already_in_fav">This is already in your favourites!</string>

    <string name="push_this_to_selected">Push to selected</string>
    <string name="push_this_to_everyone">Push to everyone</string>

    <string name="recall_learner_title">Learner Recall</string>
    <string name="recall_comment_selected">Which learners should return to LeadMe?</string>
    <string name="recall_comment_all">Return all learners to LeadMe?</string>

    <string name="delete_videos_and_websites_confirm">This will delete all of your saved videos and websites. Are you sure?</string>
    <string name="delete_videos_confirm">This will delete all of your saved videos. Are you sure?</string>
    <string name="delete_websites_confirm">This will delete all of your saved websites. Are you sure?</string>
    <string name="yes_delete_them">Yes, delete them</string>
    <string name="delete_favourites">Delete Favourites</string>
    <string name="websites">Websites</string>
    <string name="add">Add</string>
    <string name="videos">Videos</string>
    <string name="no_favourites_saved">No favourites saved.</string>
    <string name="clear">Clear</string>
    <string name="preview_unavailable">Preview unavailable</string>
    <string name="website_title">Website title</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="website_url">Website URL</string>
    <string name="will_open_in_your_default_browser">Will open in your default browser</string>
    <string name="push_to_selected">Push to selected</string>
    <string name="preview_image">Preview image</string>
    <string name="globe_icon">Globe icon</string>
    <string name="waiting_for_learners">Waiting for learners…</string>
    <string name="unlock">Play</string>
    <string name="select">Select</string>
    <string name="alerts">Alerts</string>
    <string name="lock">View</string>
    <string name="block">Block</string>
    <string name="new_video">New video</string>
    <string name="download">Download</string>
    <string name="re_push">Re-push</string>
    <string name="x_ray_view">X-Ray View</string>

    <string name="auto_install_title">Auto-install apps</string>
    <string name="install_confirm">Installation Confirmation</string>
    <string name="install">Install</string>
    <string name="application_installer">Application Installer</string>
    <string name="uninstall">Uninstall</string>
    <string name="application_uninstaller">Uninstall Applications</string>
    <string name="waiting_for_transfer">Queued for transfer</string>
    <string name="transfer_in_progress">Transferring File</string>
    <string name="turn_on">Turn On</string>
    <string name="confirm">Confirm</string>
    <string name="time_warning">"It may take some time to install depending on the Wifi speed. \n Are you sure you want to install?"</string>
    <string name="set_source">Choose Video</string>

    <string name="playback_settings_title">Playback Settings</string>
    <string name="playback_controls_title">Control Playback</string>

    <string name="vr_mode_on">VR mode ON</string>
    <string name="vr_mode_off">VR mode OFF</string>

    <string name="onboard_1">The class management tool that connects leaders and learners for a managed digital learning environment.</string>
    <string name="onboard_2">Select apps, URLs, and videos to push out to connected learner devices.</string>
    <string name="onboard_3">Block learners to black out their screens and disable touch. Unblock to return learners to normal.</string>
    <string name="onboard_4">Alert notifications will trigger when Learners are off task. Select a Learner and tap Re-push for quick management.</string>
    <string name="onboard_5">Experience our Lumination Learning Lab for yourself in virtual reality and learn how this immersive technology facilitates educational outcomes.</string>
    <string name="onboard_6">To finish a task, tap the LeadMe icon to return your learners to LeadMe. Select learn more to discover the full range of features LeadMe has to offer!</string>

    <string name="onboard_title_1">Welcome to LeadMe</string>
    <string name="onboard_title_2">Push Content</string>
    <string name="onboard_title_3">Block Devices</string>
    <string name="onboard_title_4">Manage Alerts</string>
    <string name="onboard_title_5">View our Lab in VR</string>
    <string name="onboard_title_6">Lead the Way</string>
    <string name="help">Help</string>
    <string name="display_onboarding">Display Onboarding</string>
    <string name="begin">Begin</string>
    <string name="selected">Selected</string>
    <string name="everyone">Everyone</string>
    <string name="will_stream_via_internet">*will stream via internet</string>
    <string name="will_download_via_internet">*will download via internet</string>
    <string name="currently_playing">Currently Playing</string>
    <string name="touch_screens_disabled">*Touch screens disabled</string>
    <string name="touch_screens_enabled">*Touch screens enabled</string>
    <string name="transfer_file">Transfer file</string>
    <string name="file_requested">File Requested</string>
    <string name="first_time_vr">Display and share your own\n content in VR!</string>
    <string name="vr_file_type">Only 360 files can be selected for the VR Player</string>
    <string name="selected_file_types">Selected File Types Allowed</string>
    <string name="warning_icon">Warning icon</string>
    <string name="no_video">You\'ve not chosen\n a video yet!</string>
    <string name="no_photo">You\'ve not chosen\n a photo yet!</string>
    <string name="video_launch_confirm">Your video was successfully launched.</string>
    <string name="view_mode_on">View Mode ON</string>
    <string name="view_mode_off">View Mode OFF</string>
    <string name="zero_seconds">00:00</string>
    <string name="url_hint">Input URL, or search the web</string>
    <string name="search_icon">search icon</string>
    <string name="search_web">Search Web</string>
    <string name="enter_url">Please enter URL</string>
    <string name="paste">Paste</string>
    <string name="browse_favourites">Browse favourites</string>
    <string name="connecting_icon">Connecting icon</string>
    <string name="connecting_to_leader">Connecting to Leader</string>
    <string name="please_wait_connecting">Please wait while we connect you.</string>
    <string name="search_youtube">Search YouTube</string>
    <string name="following">Following</string>
    <string name="check_details">Please check you have entered your details correctly.</string>
    <string name="play_button">Play Button</string>
    <string name="pause_button">Pause Button</string>
    <string name="mute_button">Mute Button</string>
    <string name="unmute_button">Unmute Button</string>
    <string name="change_projection_button">Change Projection Button</string>
    <string name="lock_icon">Lock Icon</string>
    <string name="projection_types">Projection Types</string>
    <string name="eac">EAC</string>
    <string name="eac_3d">EAC 3D</string>
    <string name="over_under">Over Under</string>
    <string name="side_by_side">Side By Side</string>
    <string name="mono">Mono</string>
    <string name="update">Update</string>
    <string name="new_version_available">There is a new version of LeadMe \n available on the play store.</string>
    <string name="leadme_vr_player">LeadMe VR Player</string>
    <string name="leadme_vr_install">The LeadMe VR Player is not currently \ninstalled on this device, would \nyou like to install it?</string>
    <string name="set_photo_source">Choose Photo</string>
    <string name="content_type">Select what type of content \nto preview.</string>
    <string name="photos">Photos</string>
    <string name="local_photo_content">Local photo content</string>
    <string name="new_photo">New Photo</string>
    <string name="install_youtube">Please install Youtube.</string>
    <string name="unselect">Unselect</string>
    <string name="unselected">Unselected</string>
    <string name="projection_type">Projection Type</string>
    <string name="please_confirm_pin_change">Please confirm pin change.</string>
    <string name="link">Link</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="loading_video">Loading video...</string>
    <string name="vr_player">VR Player</string>

</resources>
