...
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:showDividers="middle">

        <Button
            android:id="@+id/leader_btn"
            android:layout_width="@dimen/standard_btn_width"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
...
            android:textColor="@color/accent"
            android:textSize="18sp"
            android:translationY="-2dp"
            android:translationZ="0dp" />

        <Button
            android:id="@+id/learner_btn"
            android:layout_width="@dimen/standard_btn_width"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
...
