...
            android:fontFamily="@font/poppins_semibold"
            android:gravity="right"
            android:text="I understand the setup - "
            android:textSize="16sp" />

        <TextView
            android:id="@+id/skip_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_semibold"
            android:text="Continue"
            android:textColor="@color/leadme_blue"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
